Adapt JDK-8351268: [JVMCI] Enhance JVMCI by leveraging modern Java features